<resources>
    <string name="app_name">Trivia</string>
    <string name="title_text">Trivia</string>
    <string name="out_of_text">Question: 45/89</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="placeholder">This is where we\'ll show a statement.</string>
    <string name="display_answer_correct">Correct</string>
    <string name="display_answer_incorrect">Incorrect</string>
    <string name="score_text_placeholder"></string>
</resources>